Fix html scrollbars

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,6 +29,8 @@ html {
   height: 100%;
   font-size: $base-font-size;
   font-family: $font-family;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 body {
